--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml"
+    href="/public/360_F_274422814_sv23aGOAILKKk8ZcMgLKvHQBTEsWh7WP-removebg-preview (1).png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Bloodonors</title>
 </head>
 
 <body>
